fix for sidebar spacing AB#71185

--- a/packages/layout/src/components/sidebar/sidebar.module.scss
+++ b/packages/layout/src/components/sidebar/sidebar.module.scss
@@ -7,6 +7,7 @@
 	flex: 0 0 auto;
 	width: $sidebar-width;
 	background: $white;
+	padding-left: $space-6;
 
 	a {
 		text-decoration: none;
